# autoin

./: .env.template  .gitignore  README.md  pyproject.toml  task.md
docs/: architecture-review.md  phase-1-plan.md
src/autoin/: __init__.py  config.py  coordinator.py
src/autoin/adapters/: __init__.py  actions.py  base.py  directory.py  factory.py  runtime.py
src/autoin/adapters/drivers/: __init__.py  catalog.py  pywinauto_driver.py  windows.py
src/autoin/cognitive/: __init__.py  brain.py  checker.py
src/autoin/gateway/: __init__.py  debounce.py  memory.py  pipeline.py
src/autoin/infrastructure/: __init__.py  broker.py  lock_manager.py  models.py
src/autoin/tools/: __init__.py  control_plane.py  enqueue_dispatch.py  wechat_intake.py  wechat_observer.py  wechat_smoke.py  wechat_uia_dump.py  wechat_worker.py
tests/: test_actions.py  test_adapters.py  test_brain.py  test_checker.py  test_control_plane.py  test_coordinator.py  test_directory.py  test_douyin_platform.py  test_driver_integration.py  test_enqueue_dispatch.py  test_factory.py  test_gateway.py  test_models.py  test_pipeline.py  test_pywinauto_driver.py  test_snapshot_flow.py  test_wechat_intake.py  test_wechat_observer.py  test_wechat_platform.py  test_wechat_smoke.py  test_wechat_uia_dump.py  test_wechat_worker.py  test_worker_failure_flow.py  test_xianyu_platform.py  test_xiaohongshu_platform.py
