[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoin"
version = "0.1.0"
description = "Distributed automation infrastructure for the VLLM order intake and dispatch system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "redis>=5.0,<6",
  "PyYAML>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9"
]
windows = [
  "pywinauto>=0.6.8,<0.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
